tests/service_name_validation/manifests/invalid-service-xyz.yaml
apiVersion: v1
kind: Service
metadata:
  name: invalid-service-xyz
  namespace: check-kyverno
spec:
  selector:
    app: MyApp
  ports:
    - name: xyz-port
      port: 8081
